# LearnLite

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  USER_MANUAL.md  ai.py  app.py  cliff.toml  pdf_utils.py  pyproject.toml  rag.py  requirements.txt  translations.py  vercel.json
.specify/: README.md
.specify/memory/: constitution.md
.specify/templates/: feature-spec.md  plan-template.md  spec-template.md  task-list.md
specs/: README.md
specs/multilingual-learning-assistant/: spec.md
templates/: index.html
