[project]
name = "learnlite"
version = "0.1.0"
description = "AI-powered multilingual learning assistant with Gemini and Ollama support"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
